[AH-M] Implement Page Under Construction; fix Navigation mobile on-route

--- a/src/Application.module.scss
+++ b/src/Application.module.scss
@@ -22,6 +22,6 @@
     }
 
     main {
-        min-height: 600px;
+        min-height: 500px;
     }
 }
